# swaybar-client

./: .gitignore  MANIFEST.in  config.json  config.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py
Modules/: battery.py  config.json  cpu.py  date.py  ip.py  modules.py  time.py
module_data/ip/: timer.txt
src/Modules/: battery.py
src/swaybarclient/: swaybarclient.py
src/swaybarclient/Modules/: cpu.py  time.py
swaybarclient/: __init__.py  swaybarclient.py
swaybarclient/data/: swaybar-client-default.json
