[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'swaybar-client'
version = '1.0.0'

description = 'A swaybar client'

authors = [{ name = 'Ellie Lapanje', email = 'ellie.lapanje@gmail.com' }]
maintainers = [{ name = 'Ellie Lapanje', email = 'ellie.lapanje@gmail.com' }]

dependencies = ['psutil', 'importlib']

license = { file = 'AGPL-3.0-or-later' }

[project.scripts]
swaybarclient = 'swaybarclient:Main'

[project.urls]
Repository = 'https://github.com/Elliiem/swaybar-client'
